import java.nio.file.Files
import java.nio.file.Paths
import java.nio.file.StandardCopyOption

plugins {
  id 'java-library'
  id 'eclipse'
  id 'application'
}

group = "org.kku"
version = "1.0.1"

defaultTasks 'jar'

test
{
  useJUnitPlatform()
  testLogging {
    showStandardStreams = true 
    afterTest { descriptor , result -> 
      logger.lifecycle("Test: " + descriptor.getClassName() + " " + descriptor.getName() + " -> " + result)
    }
  }
}

apply from: 'build-eclipse.gradle'

repositories {
  mavenCentral()
}

java {
  sourceCompatibility = JavaVersion.VERSION_1_9
  targetCompatibility = JavaVersion.VERSION_1_9
}

dependencies {
  implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.2'

  testImplementation 'org.junit.jupiter:junit-jupiter:5.11.4'
  testImplementation 'org.junit.platform:junit-platform-launcher'
}


